--- a/lib/l10n/app_ka.arb
+++ b/lib/l10n/app_ka.arb
@@ -1,4 +1,37 @@
 {
   "@@locale": "ka",
-  "skapi": "სკაპი"
+
+  "@_COMMON_####################################################################################################": {},
+
+  "somethingWentWrong": "მოხდა შეცდომა!",
+  "@somethingWentWrong": {
+    "description": "Error text when something went wrong"
+  },
+
+  "@_SCREENS_####################################################################################################": {},
+
+  "screenLabelNewLoan": "ახალი სესხი",
+  "@screenLabelNewLoan": {
+    "description": "Label used for navigation bar in New Loan screen."
+  },
+
+  "screenLabelLoans": "სესხები",
+  "@screenLabelLoans": {
+    "description": "Label used for navigation bar in Loans screen."
+  },
+
+  "screenLabelHome": "მთავარი",
+  "@screenLabelHome": {
+    "description": "Label used for navigation bar in Home screen."
+  },
+
+  "screenLabelTransactions": "გზავნილები",
+  "@screenLabelTransactions": {
+    "description": "Label used for navigation bar in Transaction screen."
+  },
+
+  "screenLabelCurrency": "ვალუტა",
+  "@screenLabelCurrency": {
+    "description": "Label used for navigation bar in Currency screen."
+  }
 }
