--- a/lib/l10n/app_ka.arb
+++ b/lib/l10n/app_ka.arb
@@ -112,6 +112,16 @@
   "paymentDetailsBeforePaymentLastDate": "ბოლო ვადაა",
   "@paymentDetailsBeforePaymentLastDate": {
     "description": "Description used for payment details before payment section."
+  },
+
+  "paymentDetailsBeforePaymentInfoText": "ბალანსით სესხის წინსწრებით დასაფარად, დაგვირეკე კონტაქტ ცენტრში",
+  "@paymentDetailsBeforePaymentInfoText": {
+    "description": "Description text used for payment details before payment info section."
+  },
+
+  "paymentDetailsBeforePaymentInfoNumber": "2 300 300",
+  "@paymentDetailsBeforePaymentInfoNumber": {
+    "description": "Mobile number text used for payment details before payment info section."
   }
 
 }
