--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,16 +18,6 @@
     "description": "Next label."
   },
 
-  "chooseDebt": "Coose Debt",
-  "@chooseDebt": {
-    "description": "Choose debt label."
-  },
-
-  "chooseWhatToPay": "Choose what to pay",
-  "@chooseWhatToPay": {
-    "description": "Choose what to pay label."
-  },
-
   "pay": "Pay",
   "@pay": {
     "description": "Pay label."
@@ -132,6 +122,41 @@
   "paymentDetailsPayDescription": "Please note that loan amounts will be repaid in order of priority.",
   "@paymentDetailsPayDescription": {
     "description": "Description for pay bottom sheet in payment screen."
+  },
+
+  "paymentDetailsChooseDebt": "Choose Debt",
+  "@paymentDetailsChooseDebt": {
+    "description": "Choose debt label in payment screen bottom sheet."
+  },
+
+  "paymentDetailsChooseWhatToPay": "Choose what to pay",
+  "@paymentDetailsChooseWhatToPay": {
+    "description": "Choose what to pay label in payment screen bottom sheet."
+  },
+
+  "paymentDetailsPaymentDate": "Payment Date",
+  "@paymentDetailsPaymentDate": {
+    "description": "Payment date label in payment screen bottom sheet."
+  },
+
+  "paymentDetailsPaymentAmount": "Payment Amount",
+  "@paymentDetailsPaymentAmount": {
+    "description": "Payment amount label in payment screen bottom sheet."
+  },
+
+  "paymentDetailsRoot": "Root",
+  "@paymentDetailsRoot": {
+    "description": "Root label in payment screen."
+  },
+
+  "paymentDetailsPercent": "Percent",
+  "@paymentDetailsPercent": {
+    "description": "Percent label in payment screen."
+  },
+
+  "paymentDetailsFine": "Fine",
+  "@paymentDetailsFine": {
+    "description": "Fine label in payment screen."
   },
 
   "@_SUCCESS_SCREEN_####################################################################################################": {},
