--- a/lib/l10n/app_ka.arb
+++ b/lib/l10n/app_ka.arb
@@ -28,6 +28,19 @@
     "description": "Close label."
   },
 
+  "networkError": "ქსელის კავშირის პრობლემა. გთხოვთ, შეამოწმოთ თქვენი ინტერნეტი.",
+  "@networkError": {
+    "description": "Error message shown when there is a network connection problem."
+  },
+  "timeoutError": "კავშირის დრო ამოიწურა. გთხოვთ, სცადეთ მოგვიანებით.",
+  "@timeoutError": {
+    "description": "Error message shown when the connection times out."
+  },
+  "unknownError": "მოხდა გაუთვალისწინებელი შეცდომა. გთხოვთ, სცადეთ ხელახლა.",
+  "@unknownError": {
+    "description": "Generic error message shown for unknown errors."
+  },
+
   "@_NAVIGATION_BAR_####################################################################################################": {},
 
   "navigationLabelNewLoan": "ახალი სესხი",
