--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -100,6 +100,16 @@
     "description": "Label used for upcoming payments items section in obligations screen."
   },
 
+  "obligationsUpcomingPdfPrepare": "Prepare PDF",
+  "@obligationsUpcomingPdfPrepare": {
+    "description": "Label used for upcoming payments section button in obligations screen."
+  },
+
+  "obligationsUpcomingPdf": "PDF",
+  "@obligationsUpcomingPdf": {
+    "description": "Label used for upcoming payments pdf bottom sheet in obligations screen."
+  },
+
   "@_PAYMENT_DETAILS_SCREEN_####################################################################################################": {},
 
   "paymentDetailsDebtPayment": "Debt Payment",
